# varvector

./: CMakeLists.txt  LICENSE  README.md  test.cpp  varvector.h
bench/: compact_idx.cpp  utils.h  varvector.cpp  vector_variant.cpp
lib/: compact_idx.h  compact_idxv2.h  varvector.h
lib/exp/: compact_idx_bmi.h
tests/: compact_idx.cpp  compact_idx_test.cpp  test.cpp  varvector_test.cpp
